final-version+sponsers+fixeddisplay

--- a/gamejam/index.html
+++ b/gamejam/index.html
@@ -239,8 +239,8 @@
                   target="_blank"
                 >
                   <img
-                    src="mercadodamusicalogo.png"
-                    alt="images/Mercado da Música Logo"
+                    src="images/mercadodamusicalogo.png"
+                    alt="Mercado da Música Logo"
                   />
                 </a>
               </li>
@@ -258,7 +258,18 @@
                   href="https://www.facebook.com/poliprint2015/?locale=pt_PT"
                   target="_blank"
                 >
-                  <img src="images/poliprintlogo.png" alt="Blife Logo" />
+                  <img src="images/poliprintlogo.png" alt="Poliprint Logo" />
+                </a>
+              </li>
+              <li class="splide__slide">
+                <a
+                  href="https://www.facebook.com/Padaria.Velha/?locale=pt_PT"
+                  target="_blank"
+                >
+                  <img
+                    src="images/padariavelhalogo.png"
+                    alt="Padaria Velha Logo"
+                  />
                 </a>
               </li>
             </ul>
